# triple-entry-evidence-bsv

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/anchor/: Cargo.toml
crates/anchor/src/: lib.rs
crates/bsv/: Cargo.toml
crates/bsv/src/: lib.rs
crates/bsvcurve/: Cargo.toml
crates/bsvcurve/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/disclosure/: Cargo.toml
crates/disclosure/src/: lib.rs
crates/merkle/: Cargo.toml
crates/merkle/src/: lib.rs
crates/proofstore/: Cargo.toml
crates/proofstore/src/: lib.rs
crates/simstudy/: Cargo.toml
crates/simstudy/src/: lib.rs  main.rs
crates/tea/: Cargo.toml
crates/tea/src/: lib.rs
docs/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  REPRODUCIBILITY.md  SECURITY.md
vectors/merkle/: bsv_block_v1.json
vectors/study/: simstudy_v1.json
vectors/tea/: worked_example_v1.json
