[workspace]
resolver = "2"
members = [
    "crates/bsv",
    "crates/bsvcurve",
    "crates/tea",
    "crates/merkle",
    "crates/proofstore",
    "crates/anchor",
    "crates/disclosure",
    "crates/cli",
    "crates/simstudy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/prof-faustus/triple-entry-evidence-bsv"

[workspace.dependencies]
# Curve arithmetic and ECDSA / ECDH on the BSV curve.
# Pure-Rust, RustCrypto, no external chain attribution. The `schnorr` feature
# is deliberately disabled so no chain-fork signature scheme code compiles in.
k256 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa", "sha256", "arithmetic", "alloc"] }
ecdsa = { version = "0.16", default-features = false }
elliptic-curve = { version = "0.13", default-features = false, features = ["arithmetic"] }
signature = { version = "2", default-features = false }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
