[package]
name = "tee-merkle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Merkle Proof Entity (WO 2022/100946) over the BSV block Merkle convention."

[dependencies]
tee-bsv = { path = "../bsv" }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
